...
        case .returnKey: accessibilityLabel = "Return"
        case .shift:
            accessibilityLabel = "Shift"
            accessibilityValue = shifted ? "On" : "Off"
        case .backspace: accessibilityLabel = "Delete"
        case .emoji: accessibilityLabel = "Emoji"
        case .globe: accessibilityLabel = "Next keyboard"
        case .tab: accessibilityLabel = "Tab"
        case .capsLock:
            accessibilityLabel = "Caps Lock"
            accessibilityValue = capsLocked ? "On" : "Off"
        case .hideKeyboard: accessibilityLabel = "Hide keyboard"
        }
...
